# teensy_4_rust_tryout

./: readme.md
hello-world/: Cargo.toml  IRLED_TEST_2.hex  IRLED_Test.hex  hello-world.hex  led_display.hex
hello-world/src/: ir.rs  irV2.rs  led_display.rs  main.rs
